--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   runner_server:
     user: nobody
-    image: cyberdojo/runner
+    image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
     ports: [ "4557:4557" ]
