--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: cyberdojo/runner_client
     container_name: runner_client
     command: [ "foreman", "start", "-d", "/app" ]
-    ports: [ "4558:4558" ]
+    ports: [ "${CLIENT_PORT}:${CLIENT_PORT}" ]
     links: [ runner_server ]
 
   runner_server:
@@ -15,5 +15,5 @@ services:
     image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
-    ports: [ "4557:4557" ]
+    ports: [ "${SERVER_PORT}:${SERVER_PORT}" ]
 
