--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_ENGINE_VERSION}-0~trusty
 
 script:
-    - ./test.sh
+    - ./build_and_test.sh
 
 after_success:
     - docker login --username ${DOCKER_USERNAME} --password ${DOCKER_PASSWORD}
