--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,11 @@ services:
     links: [ runner_server ]
 
   runner_server:
-    user: nobody
+    user: cyber-dojo
     image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
     ports: [ "${SERVER_PORT}:${SERVER_PORT}" ]
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
