--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
 before_install:
     # upgrade docker-engine to specific version
     - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_ENGINE_VERSION}-0~trusty
+    - docker-compose --version
 
 script:
     - ./build_and_test.sh
