--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ before_install:
     # upgrade docker-engine to specific version
     - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_ENGINE_VERSION}-0~trusty
     - docker-compose --version
+    - uname -a
+    - cat /etc/group
+    - ls -al /var/run/docker.sock
 
 script:
     - ./build_and_test.sh
