--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     links: [ runner_server ]
 
   runner_server:
-    user: cyber-dojo
+    user: root
     image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
