pull image uses in tests (gcc/assert) before running tests so as not affect timings of actual test; tweak tests for difference in output when run locally and on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
     - whoami
 
 script:
+    - docker pull cyberdojofoundation/gcc_assert
     - ./build_and_test.sh
 
 after_success:
