--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,14 @@ services:
     image: cyberdojo/runner_client
     container_name: runner_client
     command: [ "foreman", "start", "-d", "/app" ]
-    links: [ runner_server ]
+    ports: [ "4558:4558" ]
 
   runner_server:
     user: root
     image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
+    ports: [ "4557:4557" ]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
