added (F#,NUnit) test

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 script:
     - docker pull cyberdojofoundation/gcc_assert
     - docker pull cyberdojofoundation/ruby_mini_test
+    - docker pull cyberdojofoundation/fsharp_nunit
     - ./build_and_test.sh
 
 after_success:
