--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
     - docker pull cyberdojofoundation/gcc_assert
     - docker pull cyberdojofoundation/ruby_mini_test
     - docker pull cyberdojofoundation/fsharp_nunit
+    - docker pull cyberdojofoundation/csharp_nunit
     - ./build_and_test.sh
 
 after_success:
