--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,5 @@ services:
     container_name: runner_server
     command: [ "foreman", "start", "-d", "/app" ]
     ports: [ "4557:4557" ]
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
 
