--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   runner_server:
     user: root
-    image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
+    image: cyberdojo/runner:1.12.2
     command: [ "foreman", "start", "-d", "/app" ]
     ports: [ "4557:4557" ]
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
