specify port as ARG

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-ARG  DOCKER_VERSION
+ARG DOCKER_VERSION
 RUN apk --update add curl \
   && curl -OL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz \
   && tar -xvzf docker-${DOCKER_VERSION}.tgz \
@@ -16,5 +16,7 @@ RUN apk --update add curl \
 
 ARG app_dir
 COPY . ${app_dir}
-EXPOSE 4557
-CMD [ "foreman", "start", "-d", "/app" ]
+
+ARG PORT
+EXPOSE ${PORT}
+ENTRYPOINT [ "foreman", "start", "-d", "/app" ]
