specify APP_DIR as build-arg in docker-compose.yml

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,7 +14,7 @@ RUN apk --update add curl \
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-ARG app_dir
+ARG APP_DIR
 COPY . ${app_dir}
 
 ARG PORT
