--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,10 @@
 FROM cyberdojo/runner_base
 MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
-ARG app_dir
-COPY . ${app_dir}
-EXPOSE 4558
-CMD [ "foreman", "start", "-d", "/app" ]
+ARG APP_DIR
+COPY . ${APP_DIR}
+
+ARG PORT
+ENV PORT=${PORT}
+EXPOSE ${PORT}
+ENTRYPOINT [ "foreman", "start", "-d", "/app" ]
