--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,13 +3,13 @@ MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-ARG DOCKER_VERSION
+ARG DOCKER_ENGINE_VERSION
 RUN apk --update add curl \
-  && curl -OL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz \
-  && tar -xvzf docker-${DOCKER_VERSION}.tgz \
+  && curl -OL https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_ENGINE_VERSION}.tgz \
+  && tar -xvzf docker-${DOCKER_ENGINE_VERSION}.tgz \
   && mv docker/* /usr/bin/ \
   && rmdir docker \
-  && rm docker-${DOCKER_VERSION}.tgz \
+  && rm docker-${DOCKER_ENGINE_VERSION}.tgz \
   && apk del curl
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
