in Dockerfiles specify foreman's directory using WORKDIR and not in ENTRYPOINT as only the former can use ARGs

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,8 +3,9 @@ MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
 ARG APP_DIR
 COPY . ${APP_DIR}
+WORKDIR ${APP_DIR}
 
 ARG PORT
 ENV PORT=${PORT}
 EXPOSE ${PORT}
-ENTRYPOINT [ "foreman", "start", "-d", "/app" ]
+ENTRYPOINT [ "foreman", "start" ]
