--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,8 +16,9 @@ RUN apk --update add curl \
 
 ARG APP_DIR
 COPY . ${APP_DIR}
+WORKDIR ${APP_DIR}
 
 ARG PORT
 ENV PORT=${PORT}
 EXPOSE ${PORT}
-ENTRYPOINT [ "foreman", "start", "-d", "/app" ]
+ENTRYPOINT [ "foreman", "start" ]
