refactored runner-server's Dockerfile; improved comments on undeleted volume

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,16 +2,7 @@ FROM cyberdojo/runner_base
 MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# 1. install tini (for pid 1 zombie reaping)
-# https://github.com/krallin/tini
-# https://blog.phusion.nl/2015/01/20/docker-and-the-pid-1-zombie-reaping-problem/
-
-USER root
-RUN apk add --update --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ tini
-ENTRYPOINT ["/sbin/tini", "--"]
-
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# 2. install docker-client
+# install docker-client
 
 ARG DOCKER_ENGINE_VERSION
 RUN apk --update add curl \
@@ -23,16 +14,20 @@ RUN apk --update add curl \
   && apk del curl
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# 3. install app
+# install app
 
 ARG APP_DIR
 COPY . ${APP_DIR}
 WORKDIR ${APP_DIR}
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# 4. run
+# install tini (for pid 1 zombie reaping)
+# https://github.com/krallin/tini
+# https://blog.phusion.nl/2015/01/20/docker-and-the-pid-1-zombie-reaping-problem/
 
+RUN apk add --update --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ tini
+ENTRYPOINT ["/sbin/tini", "--"]
+CMD [ "foreman", "start" ]
 ARG PORT
 ENV PORT=${PORT}
 EXPOSE ${PORT}
-CMD [ "foreman", "start" ]
