use genuine manifests for server start_files examples

--- a/server/start_files/java_cucumber/manifest.json
+++ b/server/start_files/java_cucumber/manifest.json
@@ -1,6 +1,5 @@
-
 {
-  "filenames": [
+  "visible_filenames": [
     "README",
     "Hiker.feature",
     "Hiker.java",
@@ -9,5 +8,17 @@
     "cyber-dojo.sh"
   ],
 
-  "image_name": "cyberdojofoundation/java_cucumber_pico"
+  "filename_extension" : ".java",
+
+  "display_name": "Java, Cucumber",
+
+  "image_name": "cyberdojofoundation/java_cucumber_pico",
+
+  "red_amber_green" : [
+    "lambda { |output|",
+    "  return :red   if /FAILURES!!!/.match(output)",
+    "  return :green if /OK \\((\\d*) tests\\)/.match(output)",
+    "  return :amber",
+    "}"
+  ]
 }
