--- a/server/start_files/csharp_nunit/manifest.json
+++ b/server/start_files/csharp_nunit/manifest.json
@@ -1,8 +1,21 @@
 {
-  "filenames": [
-    "cyber-dojo.sh",
+  "visible_filenames": [
+    "HikerTest.cs",
     "Hiker.cs",
-    "HikerTest.cs"
+    "cyber-dojo.sh"
   ],
-  "image_name": "cyberdojofoundation/csharp_nunit"
+
+  "filename_extension" : ".cs",
+
+  "display_name": "C#, NUnit",
+
+  "image_name": "cyberdojofoundation/csharp_nunit",
+
+  "red_amber_green" : [
+    "lambda { |output|",
+    "  return :red   if /^Errors and Failures:/.match(output)",
+    "  return :green if /^Tests run: (\\d*), Errors: 0, Failures: 0/.match(output)",
+    "  return :amber",
+    "}"
+  ]
 }
