--- a/server/start_files/gcc_assert/manifest.json
+++ b/server/start_files/gcc_assert/manifest.json
@@ -1,10 +1,23 @@
 {
-  "filenames": [
-    "cyber-dojo.sh",
-    "hiker.c",
-    "hiker.h",
-    "hiker.tests.c",
-    "makefile"
+  "visible_filenames": [
+     "hiker.tests.c",
+     "hiker.c",
+     "hiker.h",
+     "makefile",
+     "cyber-dojo.sh"
   ],
-  "image_name": "cyberdojofoundation/gcc_assert"
+
+  "filename_extension" : ".c",
+
+  "display_name": "C (gcc), assert",
+
+  "image_name": "cyberdojofoundation/gcc_assert",
+
+  "red_amber_green" : [
+    "lambda { |output|",
+    "  return :red   if /(.*)Assertion(.*)failed./.match(output)",
+    "  return :green if /(All|\\d*) tests passed/.match(output)",
+    "  return :amber",
+    "}"
+  ]
 }
