remove docker-version-number from image name (tag)

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 
 services:
   runner_server:
-    image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
+    image: cyberdojo/runner
     build:
       context: .
       args:
