--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
 after_success:
     - if [ "${TRAVIS_BRANCH}" == "master" ]; then
         docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}";
-        docker push cyberdojo/runner:${DOCKER_ENGINE_VERSION};
+        docker push cyberdojo/runner;
       fi
