--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
 
   runner_server:
     user: root
-    image: cyberdojo/runner:${DOCKER_ENGINE_VERSION}
+    image: cyberdojo/runner
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
     container_name: runner_server
