refactoring; remove commands from Dockerfile that are in foreman's Dockerfile

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,15 +1,8 @@
 FROM cyberdojo/foreman
 MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# setup foreman port
-
 ARG PORT
 ENV PORT=${PORT}
 EXPOSE ${PORT}
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# install app
-
-ARG APP_DIR
-COPY . ${APP_DIR}
+COPY . /app
