--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
     - ./test.sh
 
 after_success:
-    - if [ "${TRAVIS_BRANCH}" == "master" ]; then
+    - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+    - if [ "${BRANCH}" == "master" ]; then
         docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}";
         docker push cyberdojo/runner;
       fi
