changed name of server from runner_server to runner to match use in commander's docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports: [ "4558:4558" ]
     container_name: runner_client
 
-  runner_server:
+  runner:
     user: root
     image: cyberdojo/runner
     build:
