--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,7 @@ services:
         PORT: 4557
     image: cyberdojo/runner
     container_name: runner_server
+    read_only: true
+    tmpfs: /tmp
     user: root
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
