--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
     - docker pull cyberdojofoundation/java_cucumber_pico
     - docker pull cyberdojofoundation/csharp_moq
     - docker pull cyberdojofoundation/csharp_nunit
+    - docker pull cyberdojofoundation/clangpp_assert
     - ./pipe_build_up_test.sh
     # success!
     - ./push.sh
