travis script now only pushed image and triggers dependent repos if commit was on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,15 @@ services: docker
 language: node_js
 
 script:
-    # setup scripts
-    - npm install travis-ci
-    - curl -O https://raw.githubusercontent.com/cyber-dojo/ruby/master/trigger-build.js
-    - curl -O https://raw.githubusercontent.com/cyber-dojo/ruby/master/push.sh
-    - chmod +x push.sh
     # pull images used by tests
     - docker pull cyberdojofoundation/gcc_assert
     - docker pull cyberdojofoundation/java_cucumber_pico
     - docker pull cyberdojofoundation/csharp_moq
     - docker pull cyberdojofoundation/csharp_nunit
     - docker pull cyberdojofoundation/clangpp_assert
+    # go!
     - ./pipe_build_up_test.sh
     # success!
-    - ./push.sh
-    - node trigger-build.js cyber-dojo/web
+    - curl -O https://raw.githubusercontent.com/cyber-dojo/ruby/master/push_and_trigger.sh
+    - chmod +x push_and_trigger.sh
+    - ./push_and_trigger.sh cyber-dojo/web
