--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ sudo: required
 services: docker
 language: node_js
 
+before_script:
+    - curl -O https://raw.githubusercontent.com/cyber-dojo/ruby/master/push_and_trigger.sh
+    - chmod +x push_and_trigger.sh
+
 script:
     # pull images used by tests
     - docker pull cyberdojofoundation/gcc_assert
@@ -9,9 +13,7 @@ script:
     - docker pull cyberdojofoundation/csharp_moq
     - docker pull cyberdojofoundation/csharp_nunit
     - docker pull cyberdojofoundation/clangpp_assert
-    # go!
+    #
     - ./pipe_build_up_test.sh
-    # success!
-    - curl -O https://raw.githubusercontent.com/cyber-dojo/ruby/master/push_and_trigger.sh
-    - chmod +x push_and_trigger.sh
-    - ./push_and_trigger.sh cyber-dojo/web
+    - status=$?
+    - ./push_and_trigger.sh ${status} cyber-dojo/web
