--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ script:
     - docker pull cyberdojofoundation/csharp_nunit
     - docker pull cyberdojofoundation/clangpp_assert
     #
-    - ./pipe_build_up_test.sh
-    - status=$?
-    - ./push_and_trigger.sh ${status} cyber-dojo/web
+    - ./pipe_build_up_test.sh \
+        && ./push_and_trigger.sh cyber-dojo/web
