added comment to Dockerfile on why tar needs installing

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,7 @@
 FROM cyberdojo/docker
 MAINTAINER Jon Jagger <jon@jaggersoft.com>
 
+# Default Alpine tar does not support --owner/--group options
 RUN apk --update add tar
 
 COPY . /app
