--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,6 @@ services:
         PORT: 4557
     image: cyberdojo/runner
     container_name: runner_server
+    environment: [ CYBER_DOJO_RUNNER_CLASS=DockerKataVolumeRunner ]
     user: root
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
