--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,6 @@ services:
         PORT: 4557
     image: cyberdojo/runner
     container_name: runner_server
-    #environment: [ CYBER_DOJO_RUNNER_CLASS=DockerKataContainerRunner ]
-    #environment: [ CYBER_DOJO_RUNNER_CLASS=DockerKataVolumeRunner ]
-    environment: [ CYBER_DOJO_RUNNER_CLASS=DockerAvatarVolumeRunner ]
+    environment: [ CYBER_DOJO_RUNNER_CLASS ]
     user: root
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
