--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ script:
     - docker pull cyberdojofoundation/csharp_nunit
     - docker pull cyberdojofoundation/clangpp_assert
     #
+    - export CYBER_DOJO_RUNNER_CLASS=DockerKataContainerRunner
     - ./pipe_build_up_test.sh \
         && ./push_and_trigger.sh cyber-dojo/web
