--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         PORT: 4558
     ports: [ "4558:4558" ]
     container_name: runner_client
+    depends_on:
+      - runner
 
   runner:
     build:
@@ -21,3 +23,11 @@ services:
     container_name: runner_server
     user: root
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
+    depends_on:
+      - prometheus_pushgateway
+
+  prometheus_pushgateway:
+    image: prom/pushgateway
+    container_name: prometheus_pushgateway
+    ports:
+      - '9091:9091'
