--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ script:
     - docker pull cyberdojofoundation/gcc_assert
     - docker pull cyberdojofoundation/java_cucumber_pico
     - docker pull cyberdojofoundation/clangpp_assert
+    - docker pull cyberdojofoundation/visual-basic_nunit
+
     #
     - ./pipe_build_up_test.sh \
         && travis_wait ./push_and_trigger.sh cyber-dojo/web
