--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
     - docker pull cyberdojofoundation/clangpp_assert
 
     #
-    - ./pipe_build_up_test.sh \
+    - ./sh/pipe_build_up_test.sh \
         && travis_wait ./push_and_trigger.sh cyber-dojo/web
