--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 
-version: '2'
+version: '2.2'
 
 services:
   runner_stateful_client:
     user: nobody
     image: cyberdojo/runner_stateful_client
+    init: true
     container_name: runner_stateful_client
     read_only: true
     tmpfs: /tmp
@@ -27,6 +28,7 @@ services:
   runner_stateful:
     user: root
     image: cyberdojo/runner_stateful
+    init: true
     container_name: runner_stateful_server
     read_only: true
     tmpfs: /tmp
