--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     user: nobody
     image: cyberdojo/runner_stateful_client
     init: true
-    container_name: runner_stateful_client
+    container_name: test_runner_stateful_client
     read_only: true
     tmpfs: /tmp
     depends_on:
@@ -29,7 +29,7 @@ services:
     user: root
     image: cyberdojo/runner_stateful
     init: true
-    container_name: runner_stateful_server
+    container_name: test_runner_stateful_server
     read_only: true
     tmpfs: /tmp
     volumes:
