refactoring; set home dir via ENV-var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ version: '2.2'
 services:
 
   runner_stateful_client:
+    build:
+      context: client
+      args:
+        - CYBER_DOJO_RUNNER_HOME=${CYBER_DOJO_RUNNER_HOME}
+        - PORT=${CYBER_DOJO_RUNNER_CLIENT_PORT}
     user: nobody
     image: cyberdojo/runner_stateful_client
     init: true
@@ -16,16 +21,17 @@ services:
       - CYBER_DOJO_RUNNER_SERVICE_NAME
       - CYBER_DOJO_RUNNER_SERVICE_PORT
       - CYBER_DOJO_COVERAGE_ROOT
-    build:
-      context: client
-      args:
-        - PORT=${CYBER_DOJO_RUNNER_CLIENT_PORT}
     ports:
       - ${CYBER_DOJO_RUNNER_CLIENT_PORT}:${CYBER_DOJO_RUNNER_CLIENT_PORT}
 
   # - - - - - - - - - - - - - - - - - - - - - - - - - -
 
   runner_stateful:
+    build:
+      context: server
+      args:
+        - CYBER_DOJO_RUNNER_HOME=${CYBER_DOJO_RUNNER_HOME}
+        - PORT=${CYBER_DOJO_RUNNER_SERVICE_PORT}
     user: root
     image: cyberdojo/runner_stateful
     init: true
@@ -36,7 +42,3 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - CYBER_DOJO_COVERAGE_ROOT
-    build:
-      context: server
-      args:
-        - PORT=${CYBER_DOJO_RUNNER_SERVICE_PORT}
