--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
     container_name: test_runner_stateful_client
     read_only: true
     tmpfs: /tmp
+    restart: 'no'
     depends_on:
       - runner_stateful
+    volumes:
+      - ./client/test:${CYBER_DOJO_RUNNER_HOME}/test:ro
     environment:
       - CYBER_DOJO_RUNNER_SERVICE_NAME
       - CYBER_DOJO_RUNNER_SERVICE_PORT
@@ -38,7 +41,9 @@ services:
     container_name: test_runner_stateful_server
     read_only: true
     tmpfs: /tmp
+    restart: 'no'
     volumes:
+      - ./server/test:${CYBER_DOJO_RUNNER_HOME}/test:ro
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - CYBER_DOJO_COVERAGE_ROOT
