--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_script:
 
 script:
     # pull images used by tests
-    - docker pull cyberdojofoundation/clangpp_assert
     - docker pull cyberdojofoundation/gcc_assert
-
+    - docker pull cyberdojofoundation/cyberdojofoundation/csharp_nunit
+    - docker pull cyberdojofoundation/cyberdojofoundation/perl_test_simple
     #
-    - ./pipe_build_up_test.sh \
-        && travis_wait ./push_and_trigger.sh cyber-dojo/web
+    - travis_wait ./pipe_build_up_test.sh \
+        && ./push_and_trigger.sh cyber-dojo/web
