--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
     - docker pull cyberdojofoundation/gcc_assert
     - docker pull cyberdojofoundation/csharp_nunit
     - docker pull cyberdojofoundation/perl_test_simple
+    - docker pull cyberdojofoundation/python_pytest
     #
     - travis_wait ./pipe_build_up_test.sh \
         && ./push_and_trigger.sh cyber-dojo/web
