--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,24 @@ services:
     build:
       context: client
       args:
-        - CYBER_DOJO_HOME=${CYBER_DOJO_HOME}
-        - PORT=${CYBER_DOJO_RUNNER_CLIENT_PORT}
+        - RUNNER_STATEFUL_HOME
     user: nobody
     image: cyberdojo/runner-stateful-client
     init: true
     container_name: test-runner-stateful-client
+    expose: [ "${RUNNER_STATEFUL_CLIENT_PORT}" ]
     read_only: true
     tmpfs: /tmp
     restart: 'no'
     depends_on:
       - runner-stateful
     environment:
-      - CYBER_DOJO_RUNNER_SERVICE_NAME
-      - CYBER_DOJO_RUNNER_SERVICE_PORT
-      - CYBER_DOJO_COVERAGE_ROOT
+      - RUNNER_STATEFUL_CLIENT_PORT
+      - RUNNER_STATEFUL_SERVICE_NAME=runner-stateful
+      - RUNNER_STATEFUL_SERVICE_PORT
+      - RUNNER_STATEFUL_COVERAGE_ROOT
     ports:
-      - ${CYBER_DOJO_RUNNER_CLIENT_PORT}:${CYBER_DOJO_RUNNER_CLIENT_PORT}
+      - ${RUNNER_STATEFUL_CLIENT_PORT}:${RUNNER_STATEFUL_CLIENT_PORT}
 
   # - - - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -31,17 +32,20 @@ services:
     build:
       context: server
       args:
-        - CYBER_DOJO_HOME=${CYBER_DOJO_HOME}
-        - PORT=${CYBER_DOJO_RUNNER_SERVICE_PORT}
-        - SHA=${SHA}
+        - RUNNER_STATEFUL_HOME
+        - SHA
     user: root
     image: cyberdojo/runner-stateful
     init: true
     container_name: test-runner-stateful-server
+    expose: [ "${RUNNER_STATEFUL_SERVICE_PORT}" ]
     read_only: true
     tmpfs: /tmp
     restart: 'no'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - CYBER_DOJO_COVERAGE_ROOT
+      - RUNNER_STATEFUL_SERVICE_PORT
+      - RUNNER_STATEFUL_COVERAGE_ROOT
+      - TRAVIS
+
