--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,9 +16,9 @@ RUN apk --update --no-cache add \
 # install ruby gems
 # - - - - - - - - - - - - - - - -
 
-ARG            CYBER_DOJO_HOME
-COPY Gemfile ${CYBER_DOJO_HOME}/
-WORKDIR      ${CYBER_DOJO_HOME}
+ARG            RUNNER_STATEFUL_HOME
+COPY Gemfile ${RUNNER_STATEFUL_HOME}/
+WORKDIR      ${RUNNER_STATEFUL_HOME}
 
 RUN apk --update add --virtual build-dependencies build-base \
   && bundle config --global silence_root_warning 1 \
@@ -31,17 +31,13 @@ RUN apk --update add --virtual build-dependencies build-base \
 # setup server
 # - - - - - - - - - - - - - - - -
 
-COPY . ${CYBER_DOJO_HOME}
+COPY . ${RUNNER_STATEFUL_HOME}
 
 # - - - - - - - - - - - - - - - - -
 # git commit sha image is built from
 # - - - - - - - - - - - - - - - - -
 
 ARG SHA
-RUN echo ${SHA} > ${CYBER_DOJO_HOME}/sha.txt
-
-ARG PORT
-EXPOSE ${PORT}
-ENV PORT=${PORT}
+RUN echo ${SHA} > ${RUNNER_STATEFUL_HOME}/sha.txt
 
 CMD [ "./up.sh" ]
