refactoring; collapse env-vars directly into code

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,6 @@
 FROM  cyberdojo/docker-base
 LABEL maintainer=jon@jaggersoft.com
 
-# - - - - - - - - - - - - - - - -
-# setup client
-# - - - - - - - - - - - - - - - -
-
-ARG RUNNER_STATEFUL_HOME
-COPY . ${RUNNER_STATEFUL_HOME}
-
+COPY . /app
+EXPOSE 4558
 CMD [ "./up.sh" ]
